Fix owner image cropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,7 @@ ul {
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
     max-height: 400px;
     object-fit: cover;
+    object-position: top;
     width: 100%;
 }
 
